<resources>
    <string name="app_name">Postmark</string>
    <string name="title_home">Home</string>
    <string name="title_about">About</string>
    <string name="about_this_app">About This App</string>
    <string name="about">Postmark is an app dedicated to making posting letters and packages easy</string>
    <string name="search">Search</string>
    <string name="add_package">Add a Package</string>
    <string name="package_name">Package Name</string>
    <string name="package_id">Package ID</string>
    <string name="delivered">Delivered</string>
    <string name="not_delivered">Pending Delivery</string>
    <string name="save_details">Save Details</string>
    <string name="search_hint">Search Packages</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editPackage">Edit Package</string>
    <string name="package_provider">Package Provider</string>
    <string name="delivery_status">Delivery Status</string>
    <string name="version_announce">This is version 1.0</string>
</resources>
